--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -21,6 +21,6 @@ dependencies {
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
     implementation 'org.firstinspires.ftc:Vision:8.2.0'
 
-    implementation 'com.github.NoahBres:MeepMeep:2.0.3'
+    implementation 'com.acmerobotics.roadrunner:MeepMeep:0.1.6'
 }
 
