--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:actions:1.0.0"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
 
+    implementation "com.github.jdhs-ftc:road-runner-ftc-otos:a425f97d46"
+
     implementation 'org.openftc:apriltag:2.0.0'
     implementation 'org.openftc:easyopencv:1.7.0'
 }
@@ -39,5 +41,8 @@ dependencies {
 repositories {
     maven {
         url = 'https://maven.brott.dev/'
+    }
+    maven {
+        url = 'https://jitpack.io'
     }
 }
