--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,17 +27,14 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.13"
-    implementation "com.acmerobotics.roadrunner:core:1.0.0"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    implementation 'com.pedropathing:pedro:1.0.6'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
     implementation 'org.openftc:apriltag:2.0.0'
     implementation 'org.openftc:easyopencv:1.7.0'
 }
 
 repositories {
-    maven {
-        url = 'https://maven.brott.dev/'
-    }
+    maven { url = 'https://maven.brott.dev/' }
+    maven { url= 'https://maven.pedropathing.com/' }
 }
